manifests/apps/syncthing/securitypolicy.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: syncthing-oidc
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: syncthing-https
  oidc:
    provider:
      issuer: https://iam.example.com/auth/v1/
    clientIDRef:
      name: syncthing-oidc-secret
    clientSecret:
      name: syncthing-oidc-secret
    redirectURL: https://syncthing.example.com/oauth2/callback
    logoutPath: /logout
